; ModuleID = '/home/carl/AnghaBench/openssl/crypto/conf/extr_conf_lib.c_NCONF_load_fp.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/conf/extr_conf_lib.c_NCONF_load_fp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BIO_NOCLOSE = common dso_local global i32 0, align 4
@CONF_F_NCONF_LOAD_FP = common dso_local global i32 0, align 4
@ERR_R_BUF_LIB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @NCONF_load_fp(i32* %0, i32* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* @BIO_NOCLOSE, align 4
  %12 = call i32* @BIO_new_fp(i32* %10, i32 %11)
  store i32* %12, i32** %8, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %3
  %15 = load i32, i32* @CONF_F_NCONF_LOAD_FP, align 4
  %16 = load i32, i32* @ERR_R_BUF_LIB, align 4
  %17 = call i32 @CONFerr(i32 %15, i32 %16)
  store i32 0, i32* %4, align 4
  br label %26

18:                                               ; preds = %3
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = load i64*, i64** %7, align 8
  %22 = call i32 @NCONF_load_bio(i32* %19, i32* %20, i64* %21)
  store i32 %22, i32* %9, align 4
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @BIO_free(i32* %23)
  %25 = load i32, i32* %9, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %18, %14
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32* @BIO_new_fp(i32*, i32) #1

declare dso_local i32 @CONFerr(i32, i32) #1

declare dso_local i32 @NCONF_load_bio(i32*, i32*, i64*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
